--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "materialize";
+
+.container {
+  background-color: orange;
+  height: 100%;
+}
