--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-  HElllo
+<div class="app-container">
+  <div class="top-left"><i class="material-icons">local_florist</i></div>
+  <div class="title-container">
+    <h1>Title</h1>
+  </div>
+  <div class="bottom-left"></div>
+  <div class="bottom-right"></div>
+
 </div>
