--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
 @import "materialize";
 
-.container {
-  background-color: orange;
+html {
   height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow: hidden;
+  background-color: aliceblue;
+}
+
+.app-container {
+  background-color: lightskyblue;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  max-width: 768px;
+  position: relative;
+}
+
+.title-container {
+  background-color: brown;
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.top-left {
+  background-color: red;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
+
+.bottom-left {
+  background-color: green;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.bottom-right {
+  background-color: yellow;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
