--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,8 @@
 <div class="app-container">
-  <div class="top-left"><i class="material-icons">local_florist</i></div>
   <div class="title-container">
-    <h1>Title</h1>
+    <h1>AVALON</h1>
+    <div class="card dark-blue"></div>
   </div>
   <div class="bottom-left"></div>
   <div class="bottom-right"></div>
-
 </div>
