--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "materialize";
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 html {
   height: 100%;
@@ -12,7 +13,7 @@ body {
 }
 
 .app-container {
-  background-color: lightskyblue;
+  background-color: white;
   width: 100%;
   height: 100%;
   margin: auto;
@@ -21,23 +22,11 @@ body {
 }
 
 .title-container {
-  background-color: brown;
   position: absolute;
-  top: 5%;
+  top: 0;
   left: 50%;
   transform: translate(-50%, 0);
 }
-
-.top-left {
-  background-color: red;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-
 
 .bottom-left {
   background-color: green;
@@ -55,4 +44,8 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+h1 {
+  font-family: 'Pacifico', cursive;
 }
