Add button images

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,6 +3,38 @@
     <h1>AVALON</h1>
     <div class="card dark-blue"></div>
   </div>
-  <div class="bottom-left"></div>
-  <div class="bottom-right"></div>
+  <div class="character-select">
+    <ul class="collection">
+      <li class="collection-item">
+        <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
+        <span class="name">Loyal Servant</span>
+        <span class="number">4</span>
+      </li>
+      <li class="collection-item">
+        <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
+        <span class="name">Minion of Mordred</span>
+        <span class="number">1</span>
+      </li>
+      <li class="collection-item">
+        <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
+        <span class="name">Oberon</span>
+        <span class="number">0</span>
+      </li>
+      <li class="collection-item">
+        <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
+        <span class="name">Morganna</span>
+        <span class="number">1</span>
+      </li>
+    </ul>
+  </div>
+  <div class="player-button">
+    <img src="/assets/player-button.jpg" />
+    <h2>5</h2>
+  </div>
+  <div class="play-button">
+    <img src="/assets/play-button.jpg" />
+  </div>
+  <div class="settings-button">
+    <img src="/assets/settings-button.jpg" />
+  </div>
 </div>
