--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,26 +26,81 @@ body {
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
-}
-
-.bottom-left {
-  background-color: green;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.bottom-right {
-  background-color: yellow;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-h1 {
   font-family: 'Pacifico', cursive;
+}
+
+.character-select {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  width: 90%;
+}
+
+.collection-item {
+  height: 100px;
+
+  .portrait {
+    height: 100%;
+  }
+
+  .name {
+    font-family: 'Pacifico', cursive;
+    font-size: 30px;
+  }
+
+  .number {
+    font-family: 'Pacifico', cursive;
+    font-size: 50px;
+  }
+}
+
+.player-button {
+  background-color: green;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+
+  img {
+    height: 100%;
+    width: 100%
+  }
+
+  h2 {
+    position: absolute;
+    left: 50%;
+    bottom: 55%;
+    margin: 0;
+    transform: translate(-50%, 50%);
+  }
+}
+
+.play-button {
+  background-color: yellow;
+  width: 250px;
+  height: 100px;
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  img {
+    height: 100%;
+    width: 100%
+  }
+}
+
+.settings-button {
+  background-color: yellow;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
+
+  img {
+    height: 100%;
+    width: 100%
+  }
 }
