--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,6 +27,7 @@
       </li>
     </ul>
   </div>
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
   <div class="player-button">
     <img src="/assets/player-button.jpg" />
     <h2>5</h2>
@@ -36,5 +37,16 @@
   </div>
   <div class="settings-button">
     <img src="/assets/settings-button.jpg" />
+  </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+  <div class="modal-content">
+    <h4>Modal Header</h4>
+    <p>A bunch of text</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
   </div>
 </div>
