Add material list element

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,15 +1,15 @@
 <div class="app-container">
   <div class="title-container">
-    <h1>AVALON</h1>
-    <div class="card dark-blue"></div>
+    <span>AVALON</span>
   </div>
   <div class="character-select">
-    <ul class="collection">
-      <li class="collection-item">
+    <mat-action-list>
+      <mat-list-item>
         <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
         <span class="name">Loyal Servant</span>
         <span class="number">4</span>
-      </li>
+      </mat-list-item>
+      <!--
       <li class="collection-item">
         <img src="/assets/characters/minion.jpg" class="portrait" />
         <span class="name">Minion of Mordred</span>
@@ -25,11 +25,12 @@
         <span class="name">Morganna</span>
         <span class="number">1</span>
       </li>
-    </ul>
+    -->
+    </mat-action-list>
   </div>
   <div class="player-button">
     <img src="/assets/player-button.jpg" />
-    <h2>5</h2>
+    <span>5</span>
   </div>
   <div class="play-button">
     <img src="/assets/play-button.jpg" />
