--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,9 +18,13 @@ body {
   height: 100%;
   margin: auto;
   max-width: 768px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .title-container {
+  height: 10%;
   span {
     font-family: "Pacifico", cursive;
     font-size: 50px;
