Add material buttons

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,33 +9,31 @@
         <span class="name">Loyal Servant</span>
         <span class="number">4</span>
       </mat-list-item>
-      <!--
-      <li class="collection-item">
+      <mat-list-item>
         <img src="/assets/characters/minion.jpg" class="portrait" />
         <span class="name">Minion of Mordred</span>
         <span class="number">1</span>
-      </li>
-      <li class="collection-item">
+      </mat-list-item>
+      <mat-list-item>
         <img src="/assets/characters/oberon.jpg" class="portrait" />
         <span class="name">Oberon</span>
         <span class="number">0</span>
-      </li>
-      <li class="collection-item">
+      </mat-list-item>
+      <mat-list-item>
         <img src="/assets/characters/morganna.jpg" class="portrait" />
         <span class="name">Morganna</span>
         <span class="number">1</span>
-      </li>
-    -->
+      </mat-list-item>
     </mat-action-list>
   </div>
-  <div class="player-button">
-    <img src="/assets/player-button.jpg" />
-    <span>5</span>
-  </div>
-  <div class="play-button">
+  <a mat-button class="player-button">
+    <img src="/assets/player-button.jpg" class="player-button-image" />
+    <span class="player-button-text">5</span>
+  </a>
+  <a mat-button class="play-button">
     <img src="/assets/play-button.jpg" />
-  </div>
-  <div class="settings-button">
+  </a>
+  <a mat-button class="settings-button">
     <img src="/assets/settings-button.jpg" />
-  </div>
+  </a>
 </div>
