--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css?family=Pacifico");
 
+$font-family: "Pacifico",
+cursive;
+
 html,
 body {
   height: 100%;
 }
+
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: $font-family;
   margin: 0;
   overflow: hidden;
-  background-color: aliceblue;
+  background-color: #E8DAEF;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
 }
 
 .app-container {
@@ -21,12 +29,22 @@ body {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
+
+  .mat-button {
+    position: absolute;
+    padding: 0;
+
+    .mat-button-wrapper {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
 .title-container {
   height: 10%;
+
   span {
-    font-family: "Pacifico", cursive;
     font-size: 50px;
     position: absolute;
     top: 0;
@@ -38,58 +56,64 @@ body {
 .character-select {
   position: relative;
   width: 100%;
+
   .mat-list-base .mat-list-item {
     height: 100px;
   }
+
   .mat-list-base .mat-list-item .mat-list-item-content {
     display: block;
   }
+
   .portrait {
     height: 100%;
   }
 
   .name {
-    position: relative;
-    left: 15px;
-    bottom: 35%;
-    font-family: "Pacifico", cursive;
+    position: absolute;
+    left: 130px;
+    top: 50%;
+    transform: translate(0, -50%);
+    font-family: $font-family;
     font-size: 30px;
   }
 
   .number {
+
     float: right;
     position: relative;
-    top: 25%;
     right: 10px;
-    font-family: "Pacifico", cursive;
+    font-family: $font-family;
     font-size: 50px;
   }
 }
 
+
+
 .player-button {
-  background-color: green;
   width: 100px;
   height: 100px;
   position: absolute;
   bottom: 25px;
   left: 25px;
 
-  img {
+  .player-button-image {
     height: 100%;
     width: 100%;
   }
 
-  h2 {
+  .player-button-text {
+    font-family: $font-family;
+    font-size: 70px;
     position: absolute;
-    left: 50%;
-    bottom: 55%;
+    left: 48%;
+    top: 42%;
     margin: 0;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, -50%);
   }
 }
 
 .play-button {
-  background-color: yellow;
   width: 250px;
   height: 100px;
   position: absolute;
@@ -104,7 +128,6 @@ body {
 }
 
 .settings-button {
-  background-color: yellow;
   width: 100px;
   height: 100px;
   position: absolute;
