Add click toggling for oberon and morganna

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,10 @@ body {
   -ms-user-select: none;
 }
 
+.strikethrough {
+  text-decoration: line-through;
+}
+
 .app-container {
   background-color: white;
   width: 100%;
