--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,15 +14,15 @@
         <span class="name">Minion of Mordred</span>
         <span class="number">1</span>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item (click)="oberon()">
         <img src="/assets/characters/oberon.jpg" class="portrait" />
-        <span class="name">Oberon</span>
-        <span class="number">0</span>
+        <span class="name" [ngClass]="{'strikethrough': !oberonEnabled}">Oberon</span>
+        <span class="number">{{ !oberonEnabled ? '0' : '1' }}</span>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item (click)="morganna()">
         <img src="/assets/characters/morganna.jpg" class="portrait" />
-        <span class="name">Morganna</span>
-        <span class="number">1</span>
+        <span class="name" [ngClass]="{'strikethrough': !morgannaEnabled}">Morganna</span>
+        <span class="number">{{ !morgannaEnabled ? '0' : '1' }}</span>
       </mat-list-item>
     </mat-action-list>
   </div>
