--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,31 +4,51 @@
   </div>
   <div class="character-select">
     <mat-action-list>
-      <mat-list-item>
+      <mat-list-item (click)="openPlayerNumber()">
         <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
         <span class="name">Loyal Servant</span>
-        <span class="number">4</span>
+        <span class="number">{{ servantNumber }}</span>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item (click)="openPlayerNumber()">
         <img src="/assets/characters/minion.jpg" class="portrait" />
         <span class="name">Minion of Mordred</span>
-        <span class="number">1</span>
+        <span class="number">{{ minionNumber }}</span>
       </mat-list-item>
-      <mat-list-item (click)="oberon()">
+      <mat-list-item (click)="toggleCharacter('percival')">
+        <img src="/assets/characters/percival.jpg" class="portrait" />
+        <span
+          class="name"
+          [ngClass]="{ strikethrough: !characters['percival'] }"
+          >Percival</span
+        >
+        <span class="number">{{ characters["percival"] ? 1 : 0 }}</span>
+      </mat-list-item>
+      <mat-list-item (click)="toggleCharacter('mordred')">
+        <img src="/assets/characters/mordred.jpg" class="portrait" />
+        <span class="name" [ngClass]="{ strikethrough: !characters['mordred'] }"
+          >Mordred</span
+        >
+        <span class="number">{{ characters["mordred"] ? 1 : 0 }}</span>
+      </mat-list-item>
+      <mat-list-item (click)="toggleCharacter('oberon')">
         <img src="/assets/characters/oberon.jpg" class="portrait" />
-        <span class="name" [ngClass]="{'strikethrough': !oberonEnabled}">Oberon</span>
-        <span class="number">{{ !oberonEnabled ? '0' : '1' }}</span>
+        <span class="name" [ngClass]="{ strikethrough: !characters['oberon'] }"
+          >Oberon</span
+        >
+        <span class="number">{{ characters["oberon"] ? 1 : 0 }}</span>
       </mat-list-item>
-      <mat-list-item (click)="morganna()">
-        <img src="/assets/characters/morganna.jpg" class="portrait" />
-        <span class="name" [ngClass]="{'strikethrough': !morgannaEnabled}">Morganna</span>
-        <span class="number">{{ !morgannaEnabled ? '0' : '1' }}</span>
+      <mat-list-item (click)="toggleCharacter('morgana')">
+        <img src="/assets/characters/morgana.jpg" class="portrait" />
+        <span class="name" [ngClass]="{ strikethrough: !characters['morgana'] }"
+          >Morgana</span
+        >
+        <span class="number">{{ characters["morgana"] ? 1 : 0 }}</span>
       </mat-list-item>
     </mat-action-list>
   </div>
-  <a mat-button class="player-button">
+  <a (click)="openPlayerNumber()" mat-button class="player-button">
     <img src="/assets/player-button.jpg" class="player-button-image" />
-    <span class="player-button-text">5</span>
+    <span class="player-button-text">{{ playerNumber }}</span>
   </a>
   <a mat-button class="play-button">
     <img src="/assets/play-button.jpg" />
