--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css?family=Pacifico");
 
-$font-family: "Pacifico",
-cursive;
+$font-family: "Pacifico", cursive;
 
 html,
 body {
@@ -13,7 +12,7 @@ body {
   font-family: $font-family;
   margin: 0;
   overflow: hidden;
-  background-color: #E8DAEF;
+  background-color: #e8daef;
   -webkit-user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -46,7 +45,7 @@ body {
 }
 
 .title-container {
-  height: 10%;
+  height: 70px;
 
   span {
     font-size: 50px;
@@ -60,6 +59,7 @@ body {
 .character-select {
   position: relative;
   width: 100%;
+  height: 100%;
 
   .mat-list-base .mat-list-item {
     height: 100px;
@@ -83,7 +83,6 @@ body {
   }
 
   .number {
-
     float: right;
     position: relative;
     right: 10px;
@@ -91,8 +90,6 @@ body {
     font-size: 50px;
   }
 }
-
-
 
 .player-button {
   width: 100px;
