Add template dialog

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,12 +4,12 @@
   </div>
   <div class="character-select">
     <mat-action-list>
-      <mat-list-item (click)="openPlayerNumber()">
+      <mat-list-item (click)="openPlayerDialog()">
         <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
         <span class="name">Loyal Servant</span>
         <span class="number">{{ servantNumber }}</span>
       </mat-list-item>
-      <mat-list-item (click)="openPlayerNumber()">
+      <mat-list-item (click)="openPlayerDialog()">
         <img src="/assets/characters/minion.jpg" class="portrait" />
         <span class="name">Minion of Mordred</span>
         <span class="number">{{ minionNumber }}</span>
