--- a/src/app/player-dialog/player-dialog.component.html
+++ b/src/app/player-dialog/player-dialog.component.html
@@ -1,3 +1,14 @@
-<p>
-  player-dialog works!
-</p>
+<h2 mat-dialog-title>{{description}}</h2>
+
+<mat-dialog-content>
+
+  <input matInput placeholder="Course Description" formControlName="description">
+
+  ....
+
+</mat-dialog-content>
+
+<mat-dialog-actions>
+  <button class="mat-raised-button" (click)="close()">Close</button>
+  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+</mat-dialog-actions>
