--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -47,13 +47,13 @@
     </mat-action-list>
   </div>
   <a (click)="openPlayerNumber()" mat-button class="player-button">
-    <img src="/assets/player-button.jpg" class="player-button-image" />
+    <img src="/assets/buttons/player-dialog.jpg" class="player-button-image" />
     <span class="player-button-text">{{ playerNumber }}</span>
   </a>
   <a mat-button class="play-button">
-    <img src="/assets/play-button.jpg" />
+    <img src="/assets/buttons/play.jpg" />
   </a>
   <a mat-button class="settings-button">
-    <img src="/assets/settings-button.jpg" />
+    <img src="/assets/buttons/settings.jpg" />
   </a>
 </div>
