--- a/src/app/player-dialog/player-dialog.component.html
+++ b/src/app/player-dialog/player-dialog.component.html
@@ -1,14 +1,15 @@
-<h2 mat-dialog-title>{{description}}</h2>
-
-<mat-dialog-content>
-
-  <input matInput placeholder="Course Description" formControlName="description">
-
-  ....
-
-</mat-dialog-content>
-
-<mat-dialog-actions>
-  <button class="mat-raised-button" (click)="close()">Close</button>
-  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
-</mat-dialog-actions>
+<div class="dialog-container">
+  <div class="arrow">
+    <a (click)="left()" mat-button>
+      <img src="/assets/buttons/left-arrow.jpg" />
+    </a>
+  </div>
+  <div class="number">
+    <span>5</span>
+  </div>
+  <div class="arrow">
+    <a (click)="right()" mat-button>
+      <img src="/assets/buttons/right-arrow.jpg" />
+    </a>
+  </div>
+</div>
