--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css?family=Pacifico");
 
-$font-family: "Pacifico", cursive;
+$font-family: "Pacifico",
+cursive;
 
 html,
 body {
@@ -21,122 +22,4 @@ body {
 
 .strikethrough {
   text-decoration: line-through;
-}
-
-.app-container {
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  max-width: 768px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-
-  .mat-button {
-    position: absolute;
-    padding: 0;
-
-    .mat-button-wrapper {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-
-.title-container {
-  height: 70px;
-
-  span {
-    font-size: 50px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-}
-
-.character-select {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  .mat-list-base .mat-list-item {
-    height: 100px;
-  }
-
-  .mat-list-base .mat-list-item .mat-list-item-content {
-    display: block;
-  }
-
-  .portrait {
-    height: 100%;
-  }
-
-  .name {
-    position: absolute;
-    left: 130px;
-    top: 50%;
-    transform: translate(0, -50%);
-    font-family: $font-family;
-    font-size: 30px;
-  }
-
-  .number {
-    float: right;
-    position: relative;
-    right: 10px;
-    font-family: $font-family;
-    font-size: 50px;
-  }
-}
-
-.player-button {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  left: 25px;
-
-  .player-button-image {
-    height: 100%;
-    width: 100%;
-  }
-
-  .player-button-text {
-    font-family: $font-family;
-    font-size: 70px;
-    position: absolute;
-    left: 48%;
-    top: 42%;
-    margin: 0;
-    transform: translate(-50%, -50%);
-  }
-}
-
-.play-button {
-  width: 250px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  left: 50%;
-  transform: translate(-50%, 0);
-
-  img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.settings-button {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 25px;
-  right: 25px;
-
-  img {
-    height: 100%;
-    width: 100%;
-  }
 }
