--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -10,6 +10,8 @@ cursive;
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
+  display: flex;
+  flex-flow: column;
 
   .mat-button {
     position: absolute;
@@ -34,40 +36,41 @@ cursive;
   }
 }
 
-.character-select {
-  position: relative;
+.character-list {
   width: 100%;
-  height: 100%;
+  background-color: red;
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
 
-  .mat-list-base .mat-list-item {
-    height: 100px;
-  }
-
-  .mat-list-base .mat-list-item .mat-list-item-content {
-    display: block;
+  .character-row {
+    flex: 1 1 0;
+    overflow: visible;
+    display: flex;
+    //justify-content: space-between;
+    align-items: stretch;
   }
 
   .portrait {
-    height: 100%;
+    object-fit: contain;
   }
 
   .name {
-    position: absolute;
-    left: 130px;
-    top: 50%;
-    transform: translate(0, -50%);
     font-family: $font-family;
     font-size: 30px;
   }
 
   .number {
-    position: absolute;
-    right: 30px;
     font-family: $font-family;
     font-size: 50px;
   }
 }
 
+.footer-menu {
+  height: 150px;
+}
 
 .player-button {
   width: 100px;
