--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,5 +1,4 @@
-$font-family: "Pacifico",
-cursive;
+$font-family: "Pacifico", cursive;
 
 .app-container {
   background-color: white;
@@ -38,7 +37,6 @@ cursive;
 
 .character-list {
   width: 100%;
-  background-color: red;
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
@@ -46,15 +44,15 @@ cursive;
   align-items: stretch;
 
   .character-row {
+    min-height: 20px;
     flex: 1 1 0;
-    overflow: visible;
-    display: flex;
-    //justify-content: space-between;
-    align-items: stretch;
   }
 
   .portrait {
-    object-fit: contain;
+    margin-left: 15px;
+    min-height: 20px;
+    height: 100%;
+    width: auto;
   }
 
   .name {
@@ -63,6 +61,9 @@ cursive;
   }
 
   .number {
+    position: relative;
+    float: right;
+    right: 15px;
     font-family: $font-family;
     font-size: 50px;
   }
