--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -44,12 +44,14 @@ $font-family: "Pacifico", cursive;
   align-items: stretch;
 
   .character-row {
+    position: relative;
     min-height: 20px;
     flex: 1 1 0;
   }
 
   .portrait {
     margin-left: 15px;
+    margin-right: 15px;
     min-height: 20px;
     height: 100%;
     width: auto;
@@ -58,6 +60,9 @@ $font-family: "Pacifico", cursive;
   .name {
     font-family: $font-family;
     font-size: 30px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   .number {
