Add material form to settings dialog

--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,17 +1,4 @@
-<div class="dialog-container">
-  <div class="arrow">
-    <a (click)="down()" mat-button>
-      <img src="/assets/buttons/left-arrow.jpg" />
-    </a>
-  </div>
-  <div class="number">
-    <a (click)="close()" mat-button>
-      <span>{{ playerNum }}</span>
-    </a>
-  </div>
-  <div class="arrow">
-    <a (click)="up()" mat-button>
-      <img src="/assets/buttons/right-arrow.jpg" />
-    </a>
-  </div>
-</div>
+<mat-form-field> </mat-form-field>
+<p>
+  Settings
+</p>
