Add settings menu opening function

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -64,7 +64,7 @@
     <a mat-button class="play-button">
       <img src="/assets/buttons/play.jpg" />
     </a>
-    <a mat-button class="settings-button">
+    <a mat-button (click)="openSettingsDialog()" class="settings-button">
       <img src="/assets/buttons/settings.jpg" />
     </a>
   </div>
