--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,4 +1,3 @@
-<mat-form-field> </mat-form-field>
-<p>
-  Settings
-</p>
+<mat-slide-toggle>Slide me!</mat-slide-toggle>
+<br />
+<mat-slider></mat-slider>
