--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,3 +1,20 @@
-<mat-slide-toggle>Slide me!</mat-slide-toggle>
-<br />
-<mat-slider></mat-slider>
+<div class="settings-container">
+  <div class="form-container">
+    <mat-form-field>
+      <mat-select placeholder="Announcer Voice">
+        <mat-option value="cathy">Cathy</mat-option>
+        <mat-option value="duck">Duck</mat-option>
+        <mat-option value="screaming">Screaming</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="form-container">
+    <mat-slide-toggle>Verbose mode</mat-slide-toggle>
+  </div>
+  <div class="form-container">
+    <mat-slide-toggle>Unnecessary flair</mat-slide-toggle>
+  </div>
+  <div class="form-container">
+    <mat-slide-toggle>Tiger mode</mat-slide-toggle>
+  </div>
+</div>
