--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="settings-container">
   <div class="form-container">
     <mat-form-field>
-      <mat-select placeholder="Announcer Voice">
+      <mat-select placeholder="Announcer Voice" [(value)]="announcer">
         <mat-option value="cathy">Cathy</mat-option>
         <mat-option value="duck">Duck</mat-option>
         <mat-option value="screaming">Screaming</mat-option>
