--- a/src/app/player-dialog/player-dialog.component.html
+++ b/src/app/player-dialog/player-dialog.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="number">
     <a (click)="close()" mat-button>
-      <span>{{ playerNum }}</span>
+      <span>{{ settingsService.playerNumber }}</span>
     </a>
   </div>
   <div class="arrow">
