--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
   </div>
   <div class="form-container">
-    <mat-slide-toggle>Verbose mode</mat-slide-toggle>
+    <mat-slide-toggle>{{ selected }}</mat-slide-toggle>
   </div>
   <div class="form-container">
     <mat-slide-toggle>Unnecessary flair</mat-slide-toggle>
