--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,20 +1,20 @@
 <div class="settings-container">
   <div class="form-container">
     <mat-form-field>
-      <mat-select placeholder="Announcer Voice" [(value)]="announcer">
-        <mat-option value="cathy">Cathy</mat-option>
-        <mat-option value="duck">Duck</mat-option>
-        <mat-option value="screaming">Screaming</mat-option>
+      <mat-select placeholder="Announcer Voice" [value]="_announcer">
+        <mat-option value="0">Cathy</mat-option>
+        <mat-option value="1">Duck</mat-option>
+        <mat-option value="2">Screaming</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
   <div class="form-container">
-    <mat-slide-toggle>{{ selected }}</mat-slide-toggle>
+    <mat-slide-toggle [value]="_verbose">Verbose</mat-slide-toggle>
   </div>
   <div class="form-container">
-    <mat-slide-toggle>Unnecessary flair</mat-slide-toggle>
+    <mat-slide-toggle [value]="_flair">Unnecessary flair</mat-slide-toggle>
   </div>
   <div class="form-container">
-    <mat-slide-toggle>Tiger mode</mat-slide-toggle>
+    <mat-slide-toggle [value]="_tiger">Tiger mode</mat-slide-toggle>
   </div>
 </div>
