--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -9,12 +9,12 @@
     </mat-form-field>
   </div>
   <div class="form-container">
-    <mat-slide-toggle [value]="_verbose">Verbose</mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="_verbose">Verbose</mat-slide-toggle>
   </div>
   <div class="form-container">
-    <mat-slide-toggle [value]="_flair">Unnecessary flair</mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="_flair">Unnecessary flair</mat-slide-toggle>
   </div>
   <div class="form-container">
-    <mat-slide-toggle [value]="_tiger">Tiger mode</mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="_tiger">Tiger mode</mat-slide-toggle>
   </div>
 </div>
