Add close button to settings dialog

--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="settings-container">
   <div class="form-container">
     <mat-form-field>
-      <mat-select ngModel [formControl]="name" placeholder="Announcer Voice">
+      <mat-select [(ngModel)]="_announcer" name="_announcer" placeholder="Announcer Voice">
         <mat-option value="cathy">Cathy</mat-option>
         <mat-option value="duck">Duck</mat-option>
         <mat-option value="screaming">Screaming</mat-option>
@@ -16,5 +16,8 @@
   </div>
   <div class="form-container">
     <mat-slide-toggle>Tiger mode</mat-slide-toggle>
+  </div>
+  <div class="form-container">
+    <button mat-raised-button>Close</button>
   </div>
 </div>
