Make settings save on dialog close

--- a/src/app/player-dialog/player-dialog.component.html
+++ b/src/app/player-dialog/player-dialog.component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <div class="number">
-    <a (click)="close()" mat-button>
+    <a (click)="save()" mat-button>
       <span>{{ _playerNumber }}</span>
     </a>
   </div>
