--- a/src/app/settings-dialog/settings-dialog.component.scss
+++ b/src/app/settings-dialog/settings-dialog.component.scss
@@ -8,4 +8,10 @@ cursive;
   .form-container {
     margin: 15px;
   }
+
+  .button-container {
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+  }
 }
