Remove testing string

--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
   </div>
   <div class="form-container">
-    <mat-slide-toggle [(ngModel)]="_verbose">Verbose {{_announcer}}</mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="_verbose">Verbose</mat-slide-toggle>
   </div>
   <div class="form-container">
     <mat-slide-toggle [(ngModel)]="_flair">Unnecessary flair</mat-slide-toggle>
