--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,4 +1,5 @@
-$font-family: "Pacifico", cursive;
+$font-family: "Pacifico",
+cursive;
 
 .app-container {
   background-color: white;
@@ -24,7 +25,7 @@ $font-family: "Pacifico", cursive;
 }
 
 .title-container {
-  height: 70px;
+  height: 100px;
 
   span {
     font-size: 50px;
@@ -32,6 +33,19 @@ $font-family: "Pacifico", cursive;
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
+  }
+
+  .mute-button {
+    width: 75px;
+    height: 75px;
+    position: relative;
+    top: 10px;
+    left: 10px;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
 
@@ -82,6 +96,8 @@ $font-family: "Pacifico", cursive;
 .footer-menu {
   height: 150px;
 }
+
+// Fixed position buttons
 
 .player-button {
   width: 100px;
