Change mute button image names

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <div class="title-container">
     <a mat-button (click)="muteButton()" class="mute-button">
-      <img [src]="_mute ? '/assets/buttons/mute.jpg' : '/assets/buttons/sound.jpg'" />
+      <img [src]="_mute ? '/assets/buttons/sound-off.jpg' : '/assets/buttons/sound-on.jpg'" />
     </a>
     <span>AVALON</span>
   </div>
