Add tick image css

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,7 @@
     <a mat-button class="character-row">
       <img src="/assets/characters/merlin.jpg" class="portrait" />
       <span class="name">Merlin</span>
-      <span class="number">1</span>
+      <img src="/assets/buttons/character-on.jpg" class="enabled" />
     </a>
     <a mat-button class="character-row">
       <img src="/assets/characters/assassin.jpg" class="portrait" />
