--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,49 +7,49 @@
   </div>
   <div class="character-list">
     <a mat-button class="character-row">
-      <img src="/assets/characters/loyal-servant.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/loyal-servant.jpg" />
       <span class="name">Loyal Servant</span>
       <span class="number">{{ servantNumber }}</span>
     </a>
     <a mat-button class="character-row">
-      <img src="/assets/characters/minion.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/minion.jpg" />
       <span class="name">Minion of Mordred</span>
       <span class="number">{{ minionNumber }}</span>
     </a>
     <a mat-button class="character-row">
-      <img src="/assets/characters/merlin.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/merlin.jpg" />
       <span class="name">Merlin</span>
-      <img src="/assets/buttons/character-on.jpg" class="enabled" />
+      <img class="enabled" src="/assets/buttons/character-on.jpg" />
     </a>
     <a mat-button class="character-row">
-      <img src="/assets/characters/assassin.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/assassin.jpg" />
       <span class="name">Assassin</span>
-      <span class="number">1</span>
+      <img class="enabled" src="/assets/buttons/character-on.jpg" />
     </a>
     <a mat-button class="character-row" (click)="toggleCharacter('percival')">
-      <img src="/assets/characters/percival.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/percival.jpg" />
       <span class="name" [ngClass]="{ strikethrough: !characters['percival'] }">Percival</span>
-      <span class="number">{{ characters["percival"] ? 1 : 0 }}</span>
+      <img class="enabled" [src]="characters['percival'] ? '/assets/buttons/character-on.jpg' : '/assets/buttons/character-off.jpg'" />
     </a>
     <a mat-button class="character-row" (click)="toggleCharacter('mordred')">
-      <img src="/assets/characters/mordred.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/mordred.jpg" />
       <span class="name" [ngClass]="{ strikethrough: !characters['mordred'] }">Mordred</span>
-      <span class="number">{{ characters["mordred"] ? 1 : 0 }}</span>
+      <img class="enabled" [src]="characters['mordred'] ? '/assets/buttons/character-on.jpg' : '/assets/buttons/character-off.jpg'" />
     </a>
     <a mat-button class="character-row" (click)="toggleCharacter('oberon')">
-      <img src="/assets/characters/oberon.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/oberon.jpg" />
       <span class="name" [ngClass]="{ strikethrough: !characters['oberon'] }">Oberon</span>
-      <span class="number">{{ characters["oberon"] ? 1 : 0 }}</span>
+      <img class="enabled" [src]="characters['oberon'] ? '/assets/buttons/character-on.jpg' : '/assets/buttons/character-off.jpg'" />
     </a>
     <a mat-button class="character-row" (click)="toggleCharacter('morgana')">
-      <img src="/assets/characters/morgana.jpg" class="portrait" />
+      <img class="portrait" src="/assets/characters/morgana.jpg" />
       <span class="name" [ngClass]="{ strikethrough: !characters['morgana'] }">Morgana</span>
-      <span class="number">{{ characters["morgana"] ? 1 : 0 }}</span>
+      <img class="enabled" [src]="characters['morgana'] ? '/assets/buttons/character-on.jpg' : '/assets/buttons/character-off.jpg'" />
     </a>
   </div>
   <div class="footer-menu">
     <a mat-button (click)="openPlayerDialog()" class="player-button">
-      <img src="/assets/buttons/player-dialog.jpg" class="player-button-image" />
+      <img class="player-button-image" src="/assets/buttons/player-dialog.jpg" />
       <span class="player-button-text">{{ settingsService.playerNumber }}</span>
     </a>
     <a mat-button class="play-button">
