--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -67,8 +67,15 @@ cursive;
     position: relative;
   }
 
+  .good {
+    border-left: 15px solid lightskyblue;
+  }
+
+  .evil {
+    border-left: 15px solid pink;
+  }
+
   .portrait {
-    margin-left: 15px;
     margin-right: 15px;
     min-height: 20px;
     height: 100%;
