Selecting additional characters automatically disables others

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
     <a mat-button class="character-row good">
       <img class="portrait" src="/assets/characters/loyal-servant.jpg" />
       <span class="name">Loyal Servant</span>
-      <span class="number">{{ servantNumber }}</span>
+      <span class="number">{{ _servantNumber }}</span>
     </a>
     <a mat-button class="character-row good">
       <img class="portrait" src="/assets/characters/merlin.jpg" />
@@ -23,7 +23,7 @@
     <a mat-button class="character-row evil">
       <img class="portrait" src="/assets/characters/minion.jpg" />
       <span class="name">Minion of Mordred</span>
-      <span class="number">{{ minionNumber }}</span>
+      <span class="number">{{ _minionNumber }}</span>
     </a>
     <a mat-button class="character-row evil">
       <img class="portrait" src="/assets/characters/assassin.jpg" />
