--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -62,7 +62,7 @@ cursive;
 .footer-menu {
   height: 150px;
 
-  .player-button {
+  .stop-button {
     width: 100px;
     height: 100px;
     position: absolute;
@@ -75,7 +75,7 @@ cursive;
     }
   }
 
-  .settings-button {
+  .pause-button {
     width: 100px;
     height: 100px;
     position: absolute;
