--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
     <a mat-button (click)="muteButton()" class="mute-button">
       <img [src]="_mute ? '/assets/buttons/sound-off.jpg' : '/assets/buttons/sound-on.jpg'" />
     </a>
-    <span>AVALON</span>
+    <span>MENU</span>
   </div>
   <div class="character-list">
     <a mat-button class="character-row good">
