--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -3,7 +3,7 @@
     <a mat-button (click)="muteButton()" class="mute-button">
       <img [src]="_mute ? '/assets/buttons/sound-off.jpg' : '/assets/buttons/sound-on.jpg'" />
     </a>
-    <span>AVALON</span>
+    <span>PLAY</span>
   </div>
   <div class="centre-container">
 
