Add mute function to play page

--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -9,10 +9,10 @@
 
   </div>
   <div class="footer-menu">
-    <a mat-button (click)="stop()" class="stop-button">
+    <a mat-button (click)="stopButton()" class="stop-button">
       <img src="/assets/buttons/close.jpg" />
     </a>
-    <a mat-button (click)="pause()" class="pause-button">
+    <a mat-button (click)="pauseButton()" class="pause-button">
       <img [src]="_pause ? '/assets/buttons/sound-play.jpg' : '/assets/buttons/sound-pause.jpg'" />
     </a>
   </div>
