Add second announcer

--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -2,9 +2,8 @@
   <div class="form-container">
     <mat-form-field>
       <mat-select [(ngModel)]="_announcer" placeholder="Announcer Voice">
-        <mat-option value="cathy">Cathy</mat-option>
-        <mat-option value="duck">Duck</mat-option>
-        <mat-option value="screaming">Screaming</mat-option>
+        <mat-option value="en-gb-C">Synth Female</mat-option>
+        <mat-option value="en-gb-D">Synth Male</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
